--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,19 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+html,body{
+  margin:0;
+  padding:0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-a {
-  color: #00B7FF;
+body{
+  display:grid;
+  min-height: 100vh;
+  grid-template-rows: auto  1fr auto;;
+}
+
+header,footer{
+  background-color: red;
+  display:flex;
+  justify-content: center;
+  gap:1rem;
+  padding: 1rem;
 }
