--- a/views/layout-admin.ejs
+++ b/views/layout-admin.ejs
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/admin.css">
 </head>
 <body>
     <header>
-        <h1>My Application</h1>
+        <h1>My Application- vista admin</h1>
     </header>
     <main>
       <%- body %>    
